--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>My Webpage</title>
     </head>
     <body>
-        Hello, world!
+        <h1 style="text-align:center;">Hello, world!</h1>
 
         <p>This is a paragraph</p>
 
