--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <style>
+        h1 {
+            color: blue;
+            text-align: center;
+        }
+    </style>
     <head>
         <title>My Webpage</title>
     </head>
