--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
 <!DOCTYPE html>
 <html>
-    <style>
-        h1 {
-            color: blue;
-            text-align: center;
-        }
-    </style>
     <head>
         <title>My Webpage</title>
+        <link> rel="stylesheet" href="style1.css"
     </head>
     <body>
         <h1 style="text-align:center;">Hello, world!</h1>
