--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My Webpage</title>
-        <link> rel="stylesheet" href="style1.css"
+        <link> rel="stylesheet" href="style1.css"<\link>
     </head>
     <body>
         <h1 style="text-align:center;">Hello, world!</h1>
