--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link> rel="stylesheet" href="style1.css"<\link>
     </head>
     <body>
-        <h1 style="text-align:center;">Hello, world!</h1>
+        <h1>Hello, world!</h1>
 
         <p>This is a paragraph</p>
 
