--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My Webpage</title>
-        <link> rel="stylesheet" href="style1.css"<\link>
+        <link rel="stylesheet" href="style1.css">
     </head>
     <body>
         <h1>Hello, world!</h1>
