adding processing to page1

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
         <ol>second list item</ol>
         <ol>third list item</ol>
 
+        <a href="page1.html">Go to page 1</a>
+
     </body>
 </html>
