--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>This is page 1</h1>
-        <canvas data-processing-sources="particle.pde"></canvas>
+        <canvas data-processing-sources="Particle.pde"></canvas>
     </body>
 </html>
