--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
         <link rel="stylesheet" href="style1.css">
     </head>
     <body>
-        <h1>Hello, world!</h1>
-        <h2>aaaaaaaaaa</h2>
+        <h1>Welcome</h1>
+        <h2>Here are some things to look at</h2>
 
-        <p>This is a paragraph</p>
+        <p>Click on the links below:</p>
 
-        <ol>first list item</ol>
-        <ol>second list item</ol>
-        <ol>third list item</ol>
-
-        <a href="page1.html">Go to page 1</a>
+        <ol>
+            <a href="page1.html">Go to parametric equations</a>
+        </ol>
+        <ol>
+            <a href="page2.html">Go to mandelbrot</a>
+        </ol>
+        <ol>
+            <a href="page3.html">Go to net</a>
+        </ol>
 
     </body>
 </html>
