--- a/page3.html
+++ b/page3.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Parametric equations</title>
+        <title>Net</title>
         <link rel="stylesheet" href="style1.css">
         <script src="processing-1.3.6.min.js"></script>
     </head>
     <body>
-        <h1>Parametric equations</h1>
-        <canvas data-processing-sources="sketch_15_Lines3.pde"></canvas>
+        <h1>Net</h1>
+        <canvas data-processing-sources="net4.pde"></canvas>
     </body>
 </html>
