--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Parametric equations</h1>
-        <canvas data-processing-sources="sketch_15_Lines3.pde"></canvas>
+        <canvas data-processing-sources="sketches/sketch_15_Lines3.pde"></canvas>
     </body>
 </html>
