--- a/page3.html
+++ b/page3.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Net</h1>
-        <canvas data-processing-sources="net4.pde Node.pde"></canvas>
+        <canvas data-processing-sources="sketches/net/net4.pde sketches/net/Node.pde"></canvas>
     </body>
 </html>
