--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
     </head>
     <body>
         <h1>Welcome</h1>
-        <h2>Here are some things to look at</h2>
+        <h2>Click on the links below</h2>
 
-        <p>Click on the links below:</p>
+        <p>Parametric equation based generative graphics:</p>
 
         <ol>
-            <a href="page1.html">Go to parametric equations</a>
+            <a href="page1.html">lines</a>
         </ol>
         <ol>
-            <a href="page2.html">Go to mandelbrot</a>
+            <a href="page3.html">net</a>
         </ol>
         <ol>
-            <a href="page3.html">Go to net</a>
+            <a href="page2.html">triangles</a>
         </ol>
+        <ol>
+            <a href="morph.html">morph</a>
+        </ol>
+
 
     </body>
 </html>
