--- a/morph.html
+++ b/morph.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Triangles</title>
+        <title>Morph</title>
         <link rel="stylesheet" href="style1.css">
         <script src="processing-1.3.6.min.js"></script>
     </head>
     <body>
-        <h1>Triangles</h1>
+        <h1>Morph</h1>
         <div id="canvas-container">
-        	<canvas data-processing-sources="sketches/page2/triangles.pde"></canvas>
-        <div>
+            <canvas data-processing-sources=
+            "sketches/morph/morph2.pde
+             sketches/morph/Node.pde" 
+            ></canvas>
+        </div>
     </body>
 </html>
