--- a/page1.html
+++ b/page1.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Parametric equations</title>
+        <title>Lines</title>
         <link rel="stylesheet" href="style1.css">
         <script src="processing-1.3.6.min.js"></script>
     </head>
     <body>
-        <h1>Parametric equations</h1>
-        <canvas data-processing-sources="sketches/sketch_15_Lines3.pde"></canvas>
+        <h1>Lines</h1>
+        <div id="canvas-container">
+            <canvas data-processing-sources="sketches/sketch_15_Lines3.pde"></canvas>
+        </div>
     </body>
 </html>
