--- a/page3.html
+++ b/page3.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <h1>Net</h1>
-        <canvas data-processing-sources="sketches/net/net4.pde sketches/net/Node.pde"></canvas>
+        <div id="canvas-container">
+       		<canvas data-processing-sources="sketches/net/net4.pde sketches/net/Node.pde"></canvas>
+       	<div>
     </body>
 </html>
